tests/golden/AllWeaken.lean.expected
tests/golden/AllWeaken.lean:20:2: error: aesop: maximum number of rule applications (50) reached. Set the 'maxRuleApplications' option to increase the limit.
